fern/docs/pages/realtime-server-sdk/v3/index.mdx
---
title: "Relay Realtime SDK"
sidebar_position: 0
---

import { SiNodedotjs } from "react-icons/si";
import { MdCode, MdLibraryBooks } from "react-icons/md";

# Overview

:::caution
The [RELAY v4](/sdks/realtime-sdk) is the most up-to-date version of the Realtime Relay SDK.
Consider reading the [Upgrading to Relay v4](/sdks/realtime-sdk/v3/guides/realtime-relay-v4-vs-v3) page to understand the benefits of
[RELAY v4](/sdks/realtime-sdk) and how to upgrade.
:::

<InstallHero
  title="Realtime Server SDK"
  titleIcon={<SiNodedotjs />}
  installCommand="npm install @signalwire/realtime-api@~3"
  docsUrl="/sdks/realtime-sdk/v3/technical-reference"
  status="stable"
  packages={[
    {
      githubUrl: "https://github.com/signalwire/signalwire-js",
      type: "npm",
      packageName: "@signalwire/realtime-api",
    }
  ]}
/>

The SignalWire Realtime SDK v3 is a Node.js server SDK that enables real-time communication through WebSocket connections. Built on an event-driven architecture, it provides dedicated namespaces for voice, video, messaging, chat, pub/sub, and task management.

## How It Works

The SDK operates through a bidirectional WebSocket connection. When you call methods like `dial()` or `send()`, the SDK sends requests to SignalWire and returns promises with the results. Simultaneously, you can listen for real-time events like incoming calls or messages using the `.on()` method.

## Getting Started

<Steps>

### Install the SDK

```bash
npm install @signalwire/realtime-api@~3
```

### Create a Relay Application

For Voice, Messaging, and Task namespaces, create a [Relay Application resource](/platform/call-fabric/resources/relay-applications) in your dashboard:

1. Set a name for your application
2. Choose a reference (e.g., "support", "sales") that matches your client's topics
3. Assign [phone numbers](/platform/phone-numbers/getting-started/buying-a-phone-number#phone-number-configuration) or [SIP addresses](/platform/call-fabric/addresses) to route calls to this application

### Set up authentication

Get your project credentials from the [SignalWire Dashboard](/platform/dashboard/getting-started/your-signalwire-api-space):

```javascript
import { Voice } from "@signalwire/realtime-api";

const client = new Voice.Client({
  project: "your-project-id",
  token: "your-api-token",
  topics: ["support"]  // Must match your Relay Application reference
});
```

### Test your setup

Create a simple inbound call handler to test your setup:

```javascript
import { Voice } from "@signalwire/realtime-api";

const client = new Voice.Client({
  project: "your-project-id",
  token: "your-api-token",
  topics: ["support"]  // Must match your Relay Application reference
});

// Answer incoming calls and play a greeting
client.on("call.received", async (call) => {
  console.log("Incoming call from:", call.from);
  
  await call.answer();
  await call.playTTS({ text: "Welcome to SignalWire!" });
});

console.log("Waiting for calls...");
```

Now call the SignalWire phone number or SIP address you assigned to your Relay Application in step 2. Your application will answer and play the greeting!

</Steps>

## Usage Examples

<Tabs>
<TabItem value="voice" label="Voice Calls" default>

```javascript
import { Voice } from "@signalwire/realtime-api";

const voice = new Voice.Client({
  project: "your-project-id",
  token: "your-api-token",
  topics: ["office"]
});

// Listen for incoming calls
voice.on("call.received", async (call) => {
  console.log("Incoming call from:", call.from);
  await call.answer();
  
  // Play a greeting
  await call.playTTS({ text: "Welcome to our office" });
});

// Make an outbound call
const call = await voice.dialPhone({
  to: "+1234567890",
  from: "+0987654321"
});
```

</TabItem>
<TabItem value="messaging" label="SMS/MMS">

```javascript
import { Messaging } from "@signalwire/realtime-api";

const messaging = new Messaging.Client({
  project: "your-project-id",
  token: "your-api-token",
  topics: ["notifications"]
});

// Handle incoming messages
messaging.on("message.received", (message) => {
  console.log("Message from:", message.from);
  console.log("Content:", message.body);
});

// Send a message
await messaging.send({
  to: "+1234567890",
  from: "+0987654321",
  body: "Your appointment is confirmed for tomorrow at 3pm"
});
```

</TabItem>
<TabItem value="video" label="Video Rooms">

```javascript
import { Video } from "@signalwire/realtime-api";

const video = new Video.Client({
  project: "your-project-id",
  token: "your-api-token"
});

// Monitor room events
video.on("room.started", async (roomSession) => {
  console.log("Room started:", roomSession.name);
  
  roomSession.on("member.joined", (member) => {
    console.log("Member joined:", member.name);
  });
});

// Get active room sessions
const { roomSessions } = await video.getRoomSessions();
```

</TabItem>
<TabItem value="chat" label="Chat Applications">

```javascript
import { Chat } from "@signalwire/realtime-api";

const chat = new Chat.Client({
  project: "your-project-id",
  token: "your-api-token"
});

// Listen for messages in conversations
chat.on("message.received", (message) => {
  console.log(`${message.member.name}: ${message.content}`);
});

// Send a chat message
await chat.publish({
  channel: "general",
  content: "Hello team!"
});
```

</TabItem>
<TabItem value="pubsub" label="PubSub Messaging">

```javascript
import { PubSub } from "@signalwire/realtime-api";

const pubsub = new PubSub.Client({
  project: "your-project-id",
  token: "your-api-token"
});

// Subscribe to channels
await pubsub.subscribe(["notifications", "updates"]);

// Listen for messages
pubsub.on("message", (message) => {
  console.log(`Channel: ${message.channel}`);
  console.log(`Content: ${message.content}`);
});

// Publish a message
await pubsub.publish({
  channel: "notifications",
  content: { alert: "System maintenance in 30 minutes" }
});
```

</TabItem>
<TabItem value="task" label="Task Management">

```javascript
import { Task } from "@signalwire/realtime-api";

const task = new Task.Client({
  project: "your-project-id",
  token: "your-api-token",
  topics: ["workers"]
});

// Listen for incoming tasks
task.on("task.received", (payload) => {
  console.log("Received task:", payload);
  
  // Process the task based on payload
  if (payload.action === "send_email") {
    console.log(`Sending email to ${payload.recipient}: ${payload.subject}`);
    // Add your custom email sending logic here
  }
});

// Send a task to workers
await Task.send({
  topic: "workers",
  message: {
    action: "send_email",
    recipient: "user@example.com",
    subject: "Welcome aboard!"
  }
});
```

</TabItem>
</Tabs>

## Explore the SDK

<CardGroup>
  <Card 
    title="Technical Reference" 
    description="Complete API documentation for all namespaces, classes, and methods"
    href="/sdks/realtime-sdk/v3/technical-reference"
    icon={<MdCode />}
  />
  <Card 
    title="Guides & Examples" 
    description="Step-by-step tutorials and practical examples to get you building quickly"
    href="/sdks/realtime-sdk/v3/guides"
    icon={<MdLibraryBooks />}
  />
</CardGroup>